@@ -201,6 +201,7 @@ Release 0.19.0 - Unreleased
                operations on individual regions
    HBASE-1062  Compactions at (re)start on a large table can overwhelm DFS
    HBASE-1102  boolean HTable.exists()
+   HBASE-1105  Remove duplicated code in HCM, add javadoc to RegionState, etc.
 
   NEW FEATURES
    HBASE-875   Use MurmurHash instead of JenkinsHash [in bloomfilters]
